// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Should Be A Carousel !!! 1`] = `
<div>
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
      style="width: 1500px; left: 0px;"
    >
      <div
        class="carousel-child"
        data-index="0"
        style="width: 500px;"
      >
        <div
          class="demo demo-iphone"
        >
          <img
            alt="iphone"
            src="iphone.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="1"
        style="width: 500px;"
      >
        <div
          class="demo demo-airpods"
        >
          <img
            alt="iphone"
            src="airpods.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="2"
        style="width: 500px;"
      >
        <div
          class="demo demo-tablet"
        >
          <img
            alt="iphone"
            src="tablet.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
    </div>
    <div
      class="carousel-dots"
    >
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 13.5954px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Carousel Should Be A Carousel !!! 2`] = `
<div>
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
      style="width: 1500px; left: -500px;"
    >
      <div
        class="carousel-child"
        data-index="0"
        style="width: 500px;"
      >
        <div
          class="demo demo-iphone"
        >
          <img
            alt="iphone"
            src="iphone.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="1"
        style="width: 500px;"
      >
        <div
          class="demo demo-airpods"
        >
          <img
            alt="iphone"
            src="airpods.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="2"
        style="width: 500px;"
      >
        <div
          class="demo demo-tablet"
        >
          <img
            alt="iphone"
            src="tablet.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
    </div>
    <div
      class="carousel-dots"
    >
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Carousel Should Be A Carousel !!! 3`] = `
<div>
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
      style="width: 1500px; left: -500px;"
    >
      <div
        class="carousel-child"
        data-index="0"
        style="width: 500px;"
      >
        <div
          class="demo demo-iphone"
        >
          <img
            alt="iphone"
            src="iphone.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="1"
        style="width: 500px;"
      >
        <div
          class="demo demo-airpods"
        >
          <img
            alt="iphone"
            src="airpods.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="2"
        style="width: 500px;"
      >
        <div
          class="demo demo-tablet"
        >
          <img
            alt="iphone"
            src="tablet.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
    </div>
    <div
      class="carousel-dots"
    >
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 21.663px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Carousel Should Be A Carousel !!! 4`] = `
<div>
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
      style="width: 1500px; left: -1000px;"
    >
      <div
        class="carousel-child"
        data-index="0"
        style="width: 500px;"
      >
        <div
          class="demo demo-iphone"
        >
          <img
            alt="iphone"
            src="iphone.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="1"
        style="width: 500px;"
      >
        <div
          class="demo demo-airpods"
        >
          <img
            alt="iphone"
            src="airpods.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="2"
        style="width: 500px;"
      >
        <div
          class="demo demo-tablet"
        >
          <img
            alt="iphone"
            src="tablet.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
    </div>
    <div
      class="carousel-dots"
    >
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Carousel Should Be A Carousel !!! 5`] = `
<div>
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
      style="width: 1500px; left: -1000px;"
    >
      <div
        class="carousel-child"
        data-index="0"
        style="width: 500px;"
      >
        <div
          class="demo demo-iphone"
        >
          <img
            alt="iphone"
            src="iphone.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="1"
        style="width: 500px;"
      >
        <div
          class="demo demo-airpods"
        >
          <img
            alt="iphone"
            src="airpods.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="2"
        style="width: 500px;"
      >
        <div
          class="demo demo-tablet"
        >
          <img
            alt="iphone"
            src="tablet.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
    </div>
    <div
      class="carousel-dots"
    >
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 13.5954px;"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Carousel Should Be A Carousel !!! 6`] = `
<div>
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
      style="width: 1500px; left: 0px;"
    >
      <div
        class="carousel-child"
        data-index="0"
        style="width: 500px;"
      >
        <div
          class="demo demo-iphone"
        >
          <img
            alt="iphone"
            src="iphone.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="1"
        style="width: 500px;"
      >
        <div
          class="demo demo-airpods"
        >
          <img
            alt="iphone"
            src="airpods.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="2"
        style="width: 500px;"
      >
        <div
          class="demo demo-tablet"
        >
          <img
            alt="iphone"
            src="tablet.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
    </div>
    <div
      class="carousel-dots"
    >
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Carousel Should Be A Carousel !!! 7`] = `
<div>
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
      style="width: 1500px; left: -500px;"
    >
      <div
        class="carousel-child"
        data-index="0"
        style="width: 500px;"
      >
        <div
          class="demo demo-iphone"
        >
          <img
            alt="iphone"
            src="iphone.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="1"
        style="width: 500px;"
      >
        <div
          class="demo demo-airpods"
        >
          <img
            alt="iphone"
            src="airpods.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="2"
        style="width: 500px;"
      >
        <div
          class="demo demo-tablet"
        >
          <img
            alt="iphone"
            src="tablet.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
    </div>
    <div
      class="carousel-dots"
    >
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Carousel Should render correctlly 1`] = `
<div>
  <div
    class="carousel"
  >
    <div
      class="carousel-inner"
      style="width: 1500px; left: 0px;"
    >
      <div
        class="carousel-child"
        data-index="0"
        style="width: 500px;"
      >
        <div
          class="demo demo-iphone"
        >
          <img
            alt="iphone"
            src="iphone.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="1"
        style="width: 500px;"
      >
        <div
          class="demo demo-airpods"
        >
          <img
            alt="iphone"
            src="airpods.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
      <div
        class="carousel-child"
        data-index="2"
        style="width: 500px;"
      >
        <div
          class="demo demo-tablet"
        >
          <img
            alt="iphone"
            src="tablet.png"
          />
          <div>
            轮播图
          </div>
        </div>
      </div>
    </div>
    <div
      class="carousel-dots"
    >
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
      <span
        class="dot"
        style="width: 27px;"
      >
        <span
          style="width: 0px;"
        />
      </span>
    </div>
  </div>
</div>
`;
